--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p>I'm a writer and programmer working at the Hesburgh Libraries of the University of Notre Dame. I know Python, HTML5, and CSS3, with a lot more to come. I'm currently learning full stack web development through Flatiron School, and I possess and MFA in Creative Writing as well as a Masters of Library and Information Science from Simmons College where I majored in Information Science and Technology. The title of this blog comes from the novel A Hitchhiker's Guide to the Galaxy. The eponymous book contains everything you need to traverse the galaxy, whether or not its helpful, its thorough, and of course, always interesting.</p>
+<p>Hi! I'm Andrew. I'm a writer and programmer currently enrolled in Flatiron School's Online Full Stack Web Development Program. I love 80's movies (especially sci-fi) so there will be a lot of references to them throughout. You've been warned!</p>
